--- a/app/assets/stylesheets/utilities/_variables.scss
+++ b/app/assets/stylesheets/utilities/_variables.scss
@@ -29,3 +29,8 @@ $header-background-color: #fff;
 $overlay-background-color: #fff;
 $overlay-box-shadow: 0px 3px 7px #333;
 $overlay-border-radius: 4px;
+
+//activities
+$activity-color: #d4d4d4;
+$activity-color-hover: #484848;
+$activity-color-collapsed: #484848;
